20020423
 - (djm) Bug #222: Fix tests for getaddrinfo on OSF/1. Spotted by
   Robert Urban <urban@spielwiese.de>

20020421
 - (tim) [entropy.c.] Portability fix for SCO Unix 3.2v4.x (SCO OSR 3.0).
   entropy.c needs seteuid(getuid()) for the setuid(original_uid) to succeed.
   Patch by gert@greenie.muc.de. This fixes one part of Bug 208

20020418
 - (djm) Avoid SIGCHLD breakage when run from rsync. Fix from 
   Sturle Sunde <sturle.sunde@usit.uio.no>

20020417
 - (djm) Tell users to configure /dev/random support into OpenSSL in INSTALL
 - (djm) Fix .Nm in mdoc2man.pl from pspencer@fields.utoronto.ca
 - (tim) [configure.ac] Issue warning on --with-default-path=/some_path
   if LOGIN_CAP is enabled. Report & testing by Tuc <tuc@ttsg.com>

20020415
 - (djm) Unbreak "make install". Fix from Darren Tucker <dtucker@zip.com.au>
 - (stevesk) bsd-cygwin_util.[ch] BSD license from Corinna Vinschen
 - (tim) [configure.ac] add tests for recvmsg and sendmsg.
   [monitor_fdpass.c] add checks for HAVE_SENDMSG and HAVE_RECVMSG for
   systems that HAVE_ACCRIGHTS_IN_MSGHDR but no recvmsg or sendmsg.

20020414
 - (djm) ssh-rand-helper improvements
   - Add commandline debugging options
   - Don't write binary data if stdout is a tty (use hex instead)
   - Give it a manpage
 - (djm) Random number collection doc fixes from Ben

20020413
 - (djm) Add KrbV support patch from Simon Wilkinson <simon@sxw.org.uk>

20020412
 - (stevesk) [auth-sia.[ch]] add BSD license from Chris Adams
 - (tim) [configure.ac] add <sys/types.h> to msghdr tests. Change -L
   to -h on testing for /bin being symbolic link
 - (bal) Mistaken in Cygwin scripts for ssh starting.  Patch by
   Corinna Vinschen <vinschen@redhat.com> 
 - (bal) disable privsep if no MAP_ANON.  We can re-enable it
   after the release when we can do more testing.

20020411
 - (stevesk) [auth-sia.c] cleanup
 - (tim) [acconfig.h defines.h includes.h] put includes in includes.h and